Revert "Добавлены 2 сервиса - Auth, Task. Auth содержит API для oAuth авторизации (фронтенда нет, редиректы должны быть на нем)"
This reverts commit bdab00869c59ac07163b34596724db0aac893931.

--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,8 @@ configs/config.yml
 api/files
 secrets/production
 frontend/.vscode
-.zookeeper/
+
+zk-single-kafka-single/
 zk-*
 cmake-build-*/
 *.iws
